--- a/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.html
+++ b/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.html
@@ -16,5 +16,5 @@
     </div>
 </div>
 <div frmdb-popup *ngIf="editorOn">
-  {{formulaEditorService?.formulaState?.editedProperty?.name}} = {{formulaEditorService?.formulaState?.previewEditedDataObj[formulaEditorService?.formulaState?.editedProperty?.name]}}
+  {{formulaEditorService?.formulaState?.editedProperty?.name}} = {{formulaEditorService?.formulaState?.previewEditedDataObj? formulaEditorService?.formulaState?.previewEditedDataObj[formulaEditorService?.formulaState?.editedProperty?.name] : ''}}
 </div>
