--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -1,17 +1,14 @@
+:host {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+:host div.row {
+    width: 100%;
+}
+
 .add-del-things {
     padding-left: 5px;
     padding-right: 5px;
-}
-
-
-:host > .navbar-light .navbar-nav .nav-link {
-    padding: 0;
-}
-
-:host {
-    border-bottom: 1px solid black;
-}
-
-button[disabled] {
-    //TODO, grey out images
 }
