#91 fixed dropdown menu getting clipped

--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -1,11 +1,13 @@
-:host {
+#frmdb-dev-mode-top-bar {
     position: fixed;
     top: 0;
     left: 0;
 }
 
-:host div.row {
-    width: 100%;
+#frmdb-dev-mode-top-menu {
+    position: fixed;
+    top: 40px;
+    right: 2px;
 }
 
 .add-del-things {
