--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -1,9 +1,3 @@
-#frmdb-dev-mode-top-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
 #frmdb-dev-mode-menu {
     position: fixed;
     top: 40px;
@@ -20,4 +14,12 @@
 .add-del-things {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+:host {
+    z-index: 110;
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
 }
