--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,32 +1,33 @@
-<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container flex-fill" (dragstart)="dragStart($event)"
-  (dragend)="dragEnd($event)">
-  <fa-icon [icon]="icon" *ngIf="editMode$|async" class="drag-handle fa-xs" #dragHandle [id]="'drag_'+nodeElement._id"
-    (mousedown)="checkHandle($event)"></fa-icon>
+<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container flex-fill" (dragstart)="dragStart($event)" (dragend)="dragEnd($event)">
+  <fa-icon [icon]="icon" *ngIf="editMode$|async" class="drag-handle fa-xs" #dragHandle [id]="'drag_'+nodeElement._id" (mousedown)="checkHandle($event)">
+  </fa-icon>
   <form-context-menu [item]="nodeElement" [canDelete]="nodeElement.nodeType!=='form_grid'" [availableChildren]="getAvailableChildren()"
     [availableTypes]="getAvailableTypes()" *ngIf="editMode$|async"></form-context-menu>
 
-  <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
-  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
+  <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></div>
+  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></div>
   <div form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <form-autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-autocomplete>
-  <form-input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-input>
+  <form-input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></form-input>
+  <form-text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></form-text>
   <form-datepicker *ngSwitchCase="'form_datepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-datepicker>
   <form-timepicker *ngSwitchCase="'form_timepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-timepicker>
-  <form-chart *ngSwitchCase="'form_chart'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-chart>
-  <h-layout *ngSwitchCase="'form_grid_row'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></h-layout>
-  <v-layout *ngSwitchCase="'form_grid_col'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
-  <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
+  <form-chart *ngSwitchCase="'form_chart'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></form-chart>
+  <h-layout *ngSwitchCase="'form_grid_row'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></h-layout>
+  <v-layout *ngSwitchCase="'form_grid_col'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></v-layout>
+  <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></v-layout>
   <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
 
 </div>
