dev mode bar overlaps main window because it is very thin

--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -12,11 +12,11 @@
 
       <frmdb-formula-code-editor></frmdb-formula-code-editor>
 
-      <div class="dropdown" placement="bottom-right">
+      <!-- <div class="dropdown" placement="bottom-right">
         <a (click)="pageEditorOpened = !pageEditorOpened" href="javascript:void(0)">
           <fa-icon [icon]="pageEditorIcon" class="fa-sm"></fa-icon>
         </a>
-      </div>
+      </div> -->
       <div class="dropdown" placement="bottom-right">
         <a (click)="menuOpened = !menuOpened" href="javascript:void(0)">
           <fa-icon [icon]="settingsIcon" class="fa-sm"></fa-icon>
