--- a/fe/src/app/app.component.scss
+++ b/fe/src/app/app.component.scss
@@ -1,16 +1,12 @@
 #frmdb-toggle-dev-mode {
     position: fixed;
     top: 1px;
-    left: 5px;
+    left: 3px;
     opacity: 0.7;
     cursor: pointer;
     z-index: 12345;
     border-radius: 2px;
-    box-shadow:  -1px 1px black,
-         -1px 1px black,
-         -2px 2px black,
-         -3px 3px black,
-         -4px 4px black;    
+    box-shadow:  -2px 2px darkgrey;
 }
 
 #frmdb-toggle-dev-mode.dev-mode-on {
