--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -4,30 +4,30 @@
   <form-context-menu [item]="nodeElement" [canDelete]="nodeElement.nodeType!=='form_grid'" [availableChildren]="getAvailableChildren()"
     [availableTypes]="getAvailableTypes()" *ngIf="frmdbStreams.devMode$|async"></form-context-menu>
 
-  <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+  <div frmdb-form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
     [formReadOnly]="formReadOnly"></div>
-  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+  <div frmdb-form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
     [formReadOnly]="formReadOnly"></div>
-  <div form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+  <div frmdb-form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
-  <form-autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-autocomplete>
-  <form-input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></form-input>
-  <form-text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></form-text>
-  <form-datepicker *ngSwitchCase="'form_datepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-datepicker>
-  <form-timepicker *ngSwitchCase="'form_timepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-timepicker>
-  <form-chart *ngSwitchCase="'form_chart'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></form-chart>
-  <h-layout *ngSwitchCase="'form_grid_row'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></h-layout>
-  <v-layout *ngSwitchCase="'form_grid_col'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></v-layout>
-  <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
-    [formReadOnly]="formReadOnly"></v-layout>
+  <frmdb-form_autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></frmdb-form_autocomplete>
+  <frmdb-form_input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-form_input>
+  <frmdb-form_text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-form_text>
+  <frmdb-form_datepicker *ngSwitchCase="'form_datepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></frmdb-form_datepicker>
+  <frmdb-form_timepicker *ngSwitchCase="'form_timepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></frmdb-form_timepicker>
+  <frmdb-form_chart *ngSwitchCase="'form_chart'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-form_chart>
+  <frmdb-h_layout *ngSwitchCase="'h_layout'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-h_layout>
+  <frmdb-v_layout *ngSwitchCase="'v_layout'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-v_layout>
+  <frmdb-v_layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-v_layout>
   <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
 
 </div>
