#115 default form is computed based on the DataObj too, not just the Entity

--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -6,11 +6,11 @@
     left: 0;
     width: 100%;
     background-color: #ffffff;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid grey;
 }
 
 :host #frmdb-dev-mode-top-bar .fa-sm {
-    height: 16px;
+    height: 32px;
 }
 
 #frmdb-dev-mode-menu {
