--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -3,6 +3,8 @@
     <div class="row">
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+      <!-- role, table, id -->
+
       <fa-icon *ngIf="!(editorOn$ | async)" [icon]="editIcon" class="fa-sm" style="visibility: hidden;" (click)="clickStartEdit$.next()"></fa-icon>
       <fa-icon *ngIf="editorOn$ | async" [icon]="discardChangesIcon" class="fa-sm" (click)="clickCancelEdits$.next()" style="color:orange"></fa-icon>
 
