#115 started to refactor navigation component, not using __ anymore in table names

--- a/fe/src/app/components/v_nav/v_nav_segment.component.html
+++ b/fe/src/app/components/v_nav/v_nav_segment.component.html
@@ -13,5 +13,5 @@
             </p>
         </a>
     </li>
-    <ul class="nav" frmdb-navigation-segment [nav]="entity.children" *ngIf="!entity.collapsed || entity.onPath"></ul>
+    <ul class="nav" frmdb-v_nav_segment [nav]="entity.children" *ngIf="!entity.collapsed || entity.onPath"></ul>
 </ng-container>
