--- a/fe/src/app/themes/light-theme/layout/layout.component.html
+++ b/fe/src/app/themes/light-theme/layout/layout.component.html
@@ -11,13 +11,13 @@
           Orbico SFA
         </a>
       </div>
-      <frmdb-navigation class="nav"></frmdb-navigation>
+      <frmdb-v_nav class="nav"></frmdb-v_nav>
     </div>
     <div class="sidebar-background" [style.background-image]="'url(' + (sidebarImageUrl$ | async) + ')' "></div>      
   </div>
   <div class="main-panel">
     <!-- Navbar -->
-    <frmdb-top-nav></frmdb-top-nav>
+    <frmdb-h_nav></frmdb-h_nav>
 
     <!-- End Navbar -->
     <div class="content">
