--- a/fe/src/app/components/form_table/form_table.component.html
+++ b/fe/src/app/components/form_table/form_table.component.html
@@ -1,37 +1,17 @@
 <table class="table table-striped table-sm">
     <thead>
         <tr>
-            <ng-container *ngFor="let child of tableElement.childNodes" [ngSwitch]="child.nodeType">
-                <ng-container *ngSwitchCase="'form_autocomplete'">
-                    <th *ngFor="let propName of child.snapshotCurrentValueOfProperties">
-                        <span class="form-table-header-text">
-                            <span class="frmdb-table-header-dev-mode-identifier" *ngIf="frmdbStreams.devMode$ | async">{{propName}}</span>
-                            {{propName | i18n}}
-                        </span>
-                    </th>
-                </ng-container>
-                <th *ngSwitchCase="'form_input'">
-                    {{child.propertyName | i18n}}
-                </th>
-            </ng-container>
+            <th *ngFor="let child of tableElement.childNodes">
+                {{child.propertyName | i18n}}
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let rowControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index">
-            <ng-container *ngFor="let child of tableElement.childNodes" [ngSwitch]="child.nodeType">
-                <ng-container *ngSwitchCase="'form_autocomplete'">
-                </ng-container>
-                <ng-container *ngSwitchCase="'form_autocomplete'">
-                    <td *ngFor="let propName of child.snapshotCurrentValueOfProperties; let colIdx = index">
-                        <input class="form-control" type="text" [id]="parentFormPath + '.' + idx + '.' + child.entityName + '.' + getCopiedPropertyName(child, colIdx)"
-                            [formControl]="topLevelFormGroup.get(parentFormPath + '.' + idx + '.' + child.entityName + '.' + getCopiedPropertyName(child, colIdx))" frmdb-on_focus />
-                    </td>
-                </ng-container>
-                <td *ngSwitchCase="'form_input'">
-                    <input class="form-control" [type]="getType(child)" [id]="parentFormPath + '.' + idx + '.' + child.propertyName" [formControl]="topLevelFormGroup.get(parentFormPath + '.' + idx + '.' + child.propertyName)"
-                    frmdb-on_focus />
-                </td>
-            </ng-container>
+            <td *ngFor="let child of tableElement.childNodes">
+                <frmdb-form_item [nodeElement]="child" [topLevelFormGroup]="topLevelFormGroup"
+                    [parentFormPath]="parentFormPath + '.' + idx + '.' + child.propertyName" [formReadOnly]="formReadOnly"></frmdb-form_item>
+            </td>
         </tr>
     </tbody>
 </table>
