--- a/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="main-panel">
     <!-- Navbar -->
-    <frmdb-top-nav></frmdb-top-nav>
+    <!-- <frmdb-h_nav></frmdb-h_nav> -->
 
     <!-- End Navbar -->
     <div class="content">
