--- a/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="main-panel">
     <!-- Navbar -->
-    <frmdb-top-nav></frmdb-top-nav>
+    <!-- <frmdb-h_nav></frmdb-h_nav> -->
     
     <!-- End Navbar -->
     <div class="panel-header panel-header-sm">
