--- a/fe/src/app/components/form_table/form_table.component.html
+++ b/fe/src/app/components/form_table/form_table.component.html
@@ -1,6 +1,9 @@
 <table class="table table-striped table-sm">
     <thead>
         <tr>
+            <th>
+                <fa-icon (click)="addRow()" [icon]="addIcon" class="fa-sm"></fa-icon>
+            </th>
             <th *ngFor="let child of tableElement.childNodes">
                 {{child.propertyName | i18n}}
             </th>
@@ -8,6 +11,9 @@
     </thead>
     <tbody>
         <tr *ngFor="let rowControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index">
+            <td>
+                <fa-icon (click)="deleteRow(rowControl)" [icon]="delIcon" class="fa-sm"></fa-icon>
+            </td>
             <td *ngFor="let child of tableElement.childNodes">
                 <frmdb-form_item [nodeElement]="child" [topLevelFormGroup]="topLevelFormGroup"
                     [parentFormPath]="parentFormPath + '.' + idx + '.' + child.propertyName" [formReadOnly]="formReadOnly"></frmdb-form_item>
