--- a/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
+++ b/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
@@ -1,9 +1,12 @@
-<label [for]="parentFormPath + '.' + inputElement.propertyName">
+<label [for]="parentFormPath + '.' + inputElement.propertyName" *ngIf="!inputElement.noLabel">
     {{inputElement.refEntityName | i18n}}/{{inputElement.refPropertyName | i18n}}
 </label>
-<input class="form-control" [attr.list]="parentFormPath + '.' + inputElement.propertyName+'.list'" [id]="parentFormPath + '.' + inputElement.propertyName"
-    [formControl]="topLevelFormGroup.get(inputElement.propertyName)" *ngIf="hasControl(inputElement.propertyName)"
-    (input)="inputChange($event.target.value)" (blur)="inputLeave($event.target.value)" [value]="value$|async" />
+<input [id]="parentFormPath" class="form-control" [type]="text" [name]="parentFormPath" 
+    [formControl]="topLevelFormGroup.get(parentFormPath)"
+    *ngIf="hasControl(parentFormPath)" frmdb-on_focus 
+    [attr.list]="parentFormPath + '.' + inputElement.propertyName+'.list'"
+    (input)="inputChange($event.target.value)" (blur)="inputLeave($event.target.value)"
+/>
 <datalist [id]="parentFormPath + '.' + inputElement.propertyName+'.list'">
-    <option *ngFor="let option of options$|async">{{option}}</option>
+    <option *ngFor="let option of options">{{option}}</option>
 </datalist>
