--- a/fe/src/app/components/form_item/form_item.component.html
+++ b/fe/src/app/components/form_item/form_item.component.html
@@ -11,7 +11,7 @@
   <div frmdb-form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <frmdb-form_autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
-    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></frmdb-form_autocomplete>
+    [parentFormPath]="parentFormPath" [formReadOnly]="formReadOnly"></frmdb-form_autocomplete>
   <frmdb-form_input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
     [formReadOnly]="formReadOnly"></frmdb-form_input>
   <frmdb-form_text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
