--- a/fe/src/app/components/form_input/form_input.component.scss
+++ b/fe/src/app/components/form_input/form_input.component.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap/scss/_variables";
 @import "~bootstrap/scss/_mixins";
 :host {
+    position: relative;
     flex-basis: 0;
     flex-grow: 1;
     max-width: 100%;
