--- a/fe/src/app/themes/light-theme/layout/layout.component.html
+++ b/fe/src/app/themes/light-theme/layout/layout.component.html
@@ -7,8 +7,10 @@
 -->
     <div class="sidebar-wrapper" [style.background-image]="'background-image: url(' + (sidebarImageUrl$ | async) + ')'">
       <div class="logo">
-        <a href="http://formuladb.io" class="simple-text">
-          Orbico SFA
+        <a href="http://www.orbicobeauty.ro/" class="simple-text">
+          <img src="/assets/customers/orbico/orbico-beauty.svg" width="145" height="42" />
+          &nbsp;
+          <strong style="font-size: 32px">SFA</strong>
         </a>
       </div>
       <frmdb-v_nav class="nav"></frmdb-v_nav>
