--- a/fe/src/app/themes/light-theme/layout/layout.component.html
+++ b/fe/src/app/themes/light-theme/layout/layout.component.html
@@ -35,14 +35,14 @@
       <div class="container">
         <nav>
           <p class="copyright text-center">
-            <span style="font-size: 90%; color: grey">
+            <span style="font-size: 70%; color: lightgrey">
               Powered by
               <a href="http://formuladb.io" target="_blank">formuladb.io</a> &copy; 2018 S.C. FORMULA DATABASE S.R.L. &nbsp;
             </span>
-            <span style="font-size: 70%; color: grey">
+            <span style="font-size: 60%; color: lightgrey">
               ( webdesign &copy; 2018
-              <a href="http://www.creative-tim.com">Creative Tim</a>,
-              Some icons by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+              <a style="color: grey" href="http://www.creative-tim.com">Creative Tim</a>,
+              Some icons by <a style="color: grey" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a style="color: grey" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a  style="color: grey" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
               )
             </span>
           </p>
